@@ -1,5 +1,6 @@
 WARNING: bad22.pdf (object 4 0, file position 314): stream dictionary lacks /Length key
 WARNING: bad22.pdf (object 4 0, file position 341): attempting to recover stream length
+WARNING: bad22.pdf (object 4 0, file position 341): recovered stream length: 44
 /QTest is indirect and has type stream (10)
 /QTest is a stream.  Dictionary: << /Qength 44 >>
 Raw stream data:
