@@ -3,4 +3,5 @@ WARNING: heifer.pdf (file position 92741): xref not found
 WARNING: heifer.pdf: Attempting to reconstruct cross-reference table
 WARNING: heifer.pdf (object 2 0, file position 2165): expected endstream
 WARNING: heifer.pdf (object 2 0, file position 51): attempting to recover stream length
+WARNING: heifer.pdf (object 2 0, file position 51): recovered stream length: 2249
 qpdf: operation succeeded with warnings; resulting file may have some problems
