@@ -10,6 +10,7 @@ WARNING: issue-100.pdf (file position 304): unknown token while reading object; 
 WARNING: issue-100.pdf (file position 308): unexpected )
 WARNING: issue-100.pdf (object 5 0, file position 418): /Length key in stream dictionary is not an integer
 WARNING: issue-100.pdf (object 5 0, file position 489): attempting to recover stream length
+WARNING: issue-100.pdf (object 5 0, file position 489): recovered stream length: 12
 WARNING: issue-100.pdf (trailer, file position 953): expected dictionary key but found non-name object; inserting key /QPDFFake1
 WARNING: issue-100.pdf (trailer, file position 953): dictionary ended prematurely; using null as value for last key
 issue-100.pdf (file position 1138): unable to find /Root dictionary
