@@ -5,8 +5,10 @@ WARNING: issue-101.pdf (file position 1242): expected dictionary key but found n
 WARNING: issue-101.pdf (file position 1242): dictionary ended prematurely; using null as value for last key
 WARNING: issue-101.pdf (object 5 0, file position 1438): /Length key in stream dictionary is not an integer
 WARNING: issue-101.pdf (object 5 0, file position 1509): attempting to recover stream length
+WARNING: issue-101.pdf (object 5 0, file position 1509): recovered stream length: 205
 WARNING: issue-101.pdf (trailer, file position 2026): /Length key in stream dictionary is not an integer
 WARNING: issue-101.pdf (trailer, file position 2097): attempting to recover stream length
+WARNING: issue-101.pdf (trailer, file position 2097): recovered stream length: 709
 WARNING: issue-101.pdf (trailer, file position 2928): unknown token while reading object; treating as string
 WARNING: issue-101.pdf (trailer, file position 2930): unknown token while reading object; treating as string
 WARNING: issue-101.pdf (trailer, file position 2928): expected dictionary key but found non-name object; inserting key /QPDFFake1
@@ -14,10 +16,13 @@ WARNING: issue-101.pdf (trailer, file position 2928): expected dictionary key bu
 WARNING: issue-101.pdf (trailer, file position 2928): expected dictionary key but found non-name object; inserting key /QPDFFake3
 WARNING: issue-101.pdf (trailer, file position 2925): /Length key in stream dictionary is not an integer
 WARNING: issue-101.pdf (trailer, file position 2996): attempting to recover stream length
+WARNING: issue-101.pdf (trailer, file position 2996): recovered stream length: 12
 WARNING: issue-101.pdf (trailer, file position 3339): /Length key in stream dictionary is not an integer
 WARNING: issue-101.pdf (trailer, file position 3410): attempting to recover stream length
+WARNING: issue-101.pdf (trailer, file position 3410): recovered stream length: 12
 WARNING: issue-101.pdf (trailer, file position 3560): /Length key in stream dictionary is not an integer
 WARNING: issue-101.pdf (trailer, file position 3631): attempting to recover stream length
+WARNING: issue-101.pdf (trailer, file position 3631): recovered stream length: 167
 WARNING: issue-101.pdf (trailer, file position 4113): /Length key in stream dictionary is not an integer
 WARNING: issue-101.pdf (trailer, file position 4184): attempting to recover stream length
 WARNING: issue-101.pdf (trailer, file position 4184): unable to recover stream data; treating stream as empty
