@@ -4,4 +4,5 @@ File is not encrypted
 File is linearized
 WARNING: linearization-bounds-1.pdf (linearization hint stream: object 62 0, file position 1001182): EOF while reading token
 WARNING: linearization-bounds-1.pdf (linearization hint stream: object 62 0, file position 1183): attempting to recover stream length
+WARNING: linearization-bounds-1.pdf (linearization hint stream: object 62 0, file position 1183): recovered stream length: 106
 linearization-bounds-1.pdf (linearization hint table, file position 1183): /S (shared object) offset is out of bounds
