@@ -1,5 +1,8 @@
 2017-07-29  Jay Berkenbilt  <ejb@ql.org>
 
+	* When recovering stream length, indicate the recovered length.
+	Fixes #44.
+
 	* Add --newline-before-endstream command-line option and
 	setNewlineBeforeEndstream method to QPDFWriter. This forces qpdf
 	to always add a newline before the endstream keyword. It is a
